sessions/activity/commands/2026-03-15-033649-public-distill-targeted-tests/stdout.txt

=================================== ERRORS ====================================
__________________ ERROR collecting tests/test_synthetic.py ___________________
C:\Users\Afsah\AppData\Roaming\Python\Python313\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\Afsah\AppData\Roaming\Python\Python313\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Program Files\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\Afsah\AppData\Roaming\Python\Python313\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests\test_synthetic.py:1: in <module>
    from ava.synthetic import (
E     File "D:\AVA\src\ava\synthetic.py", line 753
E       return prompt.split("
E                           ^
E   SyntaxError: unterminated string literal (detected at line 753)
=========================== short test summary info ===========================
ERROR tests/test_synthetic.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
